deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/ingress-class: nginx
spec:
  rules:
    - host: cw.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cw-base
                port:
                  number: 8080
